Resolves: fdo#72142 darker default workspace color

Change-Id: I7fec37c5edd42d974bddb4abbecb0d2b3dd86f14